// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. primary tile 1`] = `
<div>
  <div>
    <div>
      <div>
        ROYALS
      </div>
    </div>
    <div>
      <div>
        <div>
          <div>
            <svg
              aria-label="[title]"
              height={8}
              role="img"
              viewBox="0 0 20 20"
              width={8}
            >
              <title>
                Diamond Icon
              </title>
              <g
                fill="#E34605"
              >
                <path
                  d="M 0,10 10,20 20,10 10,0 Z"
                />
              </g>
            </svg>
          </div>
          <div
            aria-label="new Flag"
            data-testid="flag-new"
          >
            new
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <svg
              aria-label="[title]"
              height={8}
              role="img"
              viewBox="0 0 20 20"
              width={8}
            >
              <title>
                Diamond Icon
              </title>
              <g
                fill="#C51D24"
              >
                <path
                  d="M 0,10 10,20 20,10 10,0 Z"
                />
              </g>
            </svg>
          </div>
          <div
            aria-label="exclusive Flag"
            data-testid="flag-exclusive"
          >
            exclusive
          </div>
        </div>
      </div>
    </div>
    <h3
      aria-level="3"
      role="heading"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </h3>
  </div>
  <div>
    <Image
      aspectRatio={1.7777777777777777}
      uri="https://img/someImage"
    />
  </div>
</div>
`;

exports[`2. primary tiles without image 1`] = `
<div>
  <div>
    <div>
      <div>
        ROYALS
      </div>
    </div>
    <div>
      <div>
        <div>
          <div>
            <svg
              aria-label="[title]"
              height={8}
              role="img"
              viewBox="0 0 20 20"
              width={8}
            >
              <title>
                Diamond Icon
              </title>
              <g
                fill="#E34605"
              >
                <path
                  d="M 0,10 10,20 20,10 10,0 Z"
                />
              </g>
            </svg>
          </div>
          <div
            aria-label="new Flag"
            data-testid="flag-new"
          >
            new
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <svg
              aria-label="[title]"
              height={8}
              role="img"
              viewBox="0 0 20 20"
              width={8}
            >
              <title>
                Diamond Icon
              </title>
              <g
                fill="#C51D24"
              >
                <path
                  d="M 0,10 10,20 20,10 10,0 Z"
                />
              </g>
            </svg>
          </div>
          <div
            aria-label="exclusive Flag"
            data-testid="flag-exclusive"
          >
            exclusive
          </div>
        </div>
      </div>
    </div>
    <h3
      aria-level="3"
      role="heading"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </h3>
  </div>
  <div>
    <span>
      
      The 
      <span>
        Duke of Edinburgh
      </span>
       could be charged with driving without due care and attention after his car accident yesterday
      ...
    </span>
  </div>
</div>
`;

exports[`3. lead one full width slice 1`] = `
<div>
  <div>
    <div>
      <div>
        ROYALS
      </div>
    </div>
    <div>
      <div>
        <div>
          <div>
            <svg
              aria-label="[title]"
              height={8}
              role="img"
              viewBox="0 0 20 20"
              width={8}
            >
              <title>
                Diamond Icon
              </title>
              <g
                fill="#E34605"
              >
                <path
                  d="M 0,10 10,20 20,10 10,0 Z"
                />
              </g>
            </svg>
          </div>
          <div
            aria-label="new Flag"
            data-testid="flag-new"
          >
            new
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <svg
              aria-label="[title]"
              height={8}
              role="img"
              viewBox="0 0 20 20"
              width={8}
            >
              <title>
                Diamond Icon
              </title>
              <g
                fill="#C51D24"
              >
                <path
                  d="M 0,10 10,20 20,10 10,0 Z"
                />
              </g>
            </svg>
          </div>
          <div
            aria-label="exclusive Flag"
            data-testid="flag-exclusive"
          >
            exclusive
          </div>
        </div>
      </div>
    </div>
    <h3
      aria-level="3"
      role="heading"
    >
      Prince Philip ‘could be prosecuted’ over car crash
    </h3>
  </div>
  <div>
    <Image
      aspectRatio={1.7777777777777777}
      uri="https://img/someImage"
    />
  </div>
</div>
`;

exports[`4. lead one and one slice 1`] = `
<div>
  <div>
    <div>
      <div>
        <div>
          <div>
            <div>
              <div>
                ROYALS
              </div>
            </div>
            <div>
              <div>
                <div>
                  <div>
                    <svg
                      aria-label="[title]"
                      height={8}
                      role="img"
                      viewBox="0 0 20 20"
                      width={8}
                    >
                      <title>
                        Diamond Icon
                      </title>
                      <g
                        fill="#E34605"
                      >
                        <path
                          d="M 0,10 10,20 20,10 10,0 Z"
                        />
                      </g>
                    </svg>
                  </div>
                  <div
                    aria-label="new Flag"
                    data-testid="flag-new"
                  >
                    new
                  </div>
                </div>
              </div>
              <div>
                <div>
                  <div>
                    <svg
                      aria-label="[title]"
                      height={8}
                      role="img"
                      viewBox="0 0 20 20"
                      width={8}
                    >
                      <title>
                        Diamond Icon
                      </title>
                      <g
                        fill="#C51D24"
                      >
                        <path
                          d="M 0,10 10,20 20,10 10,0 Z"
                        />
                      </g>
                    </svg>
                  </div>
                  <div
                    aria-label="exclusive Flag"
                    data-testid="flag-exclusive"
                  >
                    exclusive
                  </div>
                </div>
              </div>
            </div>
            <h3
              aria-level="3"
              role="heading"
            >
              Prince Philip ‘could be prosecuted’ over car crash
            </h3>
          </div>
          <div>
            <Image
              aspectRatio={1.7777777777777777}
              uri="https://img/someImage"
            />
          </div>
        </div>
      </div>
      <div />
      <div>
        <div>
          <div>
            <div>
              <div>
                <div>
                  CYBER CRIME
                </div>
              </div>
              <div>
                <div>
                  <div>
                    <div>
                      <svg
                        aria-label="[title]"
                        height={8}
                        role="img"
                        viewBox="0 0 20 20"
                        width={8}
                      >
                        <title>
                          Diamond Icon
                        </title>
                        <g
                          fill="#E34605"
                        >
                          <path
                            d="M 0,10 10,20 20,10 10,0 Z"
                          />
                        </g>
                      </svg>
                    </div>
                    <div
                      aria-label="new Flag"
                      data-testid="flag-new"
                    >
                      new
                    </div>
                  </div>
                </div>
                <div>
                  <div>
                    <div>
                      <svg
                        aria-label="[title]"
                        height={8}
                        role="img"
                        viewBox="0 0 20 20"
                        width={8}
                      >
                        <title>
                          Diamond Icon
                        </title>
                        <g
                          fill="#C51D24"
                        >
                          <path
                            d="M 0,10 10,20 20,10 10,0 Z"
                          />
                        </g>
                      </svg>
                    </div>
                    <div
                      aria-label="exclusive Flag"
                      data-testid="flag-exclusive"
                    >
                      exclusive
                    </div>
                  </div>
                </div>
              </div>
              <h3
                aria-level="3"
                role="heading"
              >
                GCHQ gives girls free cyber-classes to tackle gender gap
              </h3>
            </div>
            <div>
              <span>
                
                GCHQ will give free cyber-classes to hundreds of girls in an attempt to boost diversity in the tech industry.
              </span>
              <span>
                 
                The intelligence
                ...
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
